# web-utils

./: .travis.yml  CHANGELOG.rst  LICENSE  Pipfile  README.rst  setup.cfg  setup.py
docs/: conf.py  index.rst
src/web_utils/: __main__.py  cli.py
tests/: test_web_utils.py
